# Phogo_v3

./: README.md  bom.txt
Phogo_v2/ArduinoSketchbook/PhogoServer/data/: index.html
dev_server/: .python-version  README.md  pyproject.toml
dev_server/src/phogo_dev/: __init__.py  __main__.py  middleware.py  server.py
phogo_web/: .gitignore  README.md  gulpfile2.js  package-lock.json  package.json
phogo_web/dev_server/: dev_server.py
phogo_web/gulp_tasks/: config.js
phogo_web/gulp_tasks/environments/: default.js  development.js  production.js
phogo_web/gulp_tasks/tasks/: clean.js  default.js  dummy_1.js  dummy_2.js  dummy_3.js  dummy_4.js  less.js  minify-js.js  serve.js
phogo_web/skeleton/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
phogo_web/skeleton/src/: Phogo.ts  app.html
phogo_web/skeleton/src/routes/: +layout.svelte  +page.svelte
phogo_web/src/less/: phogo.less  phogo_v2_dark_theme.less  phogo_v2_light_theme.less  phogo_v2_main_mixin.less
phogo_web/test_files/: testallcommands.py  testcode.py
phogo_web/tfg/: README.md  bower.json  gulpfile.js  package-lock.json  package.json  requirements.txt
phogo_web/tfg/dev/: index.html
phogo_web/tfg/dev/css/: phogo.css  phogo_v2_dark_theme.css  phogo_v2_light_theme.css  terminal_dark_theme.css
phogo_web/tfg/dev/js/: jquery-ui.min.js
phogo_web/tfg/dev_server/: dev_server.py
phogo_web/tfg/gulp_tasks/: NEWgulpfile.js  config.js
phogo_web/tfg/src/: console.html
phogo_web/tfg/virtual_turtle_server/: vturtle.py
phogo_web/virtual_turtle_server/: server.py
(+29 files in other folders)
