[tool.poetry]
name = "phogo-dev"
version = "0.1.0"
description = "Phogo Development server. Imitates a Phogo turtle for development purposes."
authors = ["Carlos Gonzalez <gonsa.carlos@gmail.com>"]
readme = "README.md"

packages = [
    { include = "phogo_dev", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
brython = "^3.12.1"

[tool.poetry.scripts]
phogo = "phogo_dev.__main__:main"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
